--- a/index.html
+++ b/index.html
@@ -339,21 +339,69 @@
             <div class="acc-body-inner">
               <div class="card">
                 <div class="title">Panel 1GB</div>
-                <div class="muted">1 CPU • 10GB Disk</div>
-                <div class="price">Rp 5.000 / bln</div>
-                <button class="btn-primary" data-select data-cat="Panel" data-plan="1GB" data-price="5000">Pilih Paket</button>
+                <div class="muted">CPU 40% • Disk 1Gb</div>
+                <div class="price">Rp 1.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="Panel" data-plan="1GB" data-price="1000">Pilih Paket</button>
               </div>
               <div class="card">
                 <div class="title">Panel 2GB</div>
-                <div class="muted">1.5 CPU • 15GB Disk</div>
-                <div class="price">Rp 8.000 / bln</div>
-                <button class="btn-primary" data-select data-cat="Panel" data-plan="2GB" data-price="8000">Pilih Paket</button>
+                <div class="muted">CPU 60% • Disk 1Gb</div>
+                <div class="price">Rp 2.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="Panel" data-plan="2GB" data-price="2000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">Panel 3GB</div>
+                <div class="muted">CPU 80% • Disk 2Gb</div>
+                <div class="price">Rp 3.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="Panel" data-plan="3GB" data-price="3000">Pilih Paket</button>
               </div>
               <div class="card">
                 <div class="title">Panel 4GB</div>
-                <div class="muted">2 CPU • 25GB Disk</div>
+                <div class="muted">CPU 100% • Disk 2Gb</div>
+                <div class="price">Rp 4.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="Panel" data-plan="4GB" data-price="4000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">Panel 5GB</div>
+                <div class="muted">CPU 120% • Disk 3Gb</div>
+                <div class="price">Rp 5.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="Panel" data-plan="5GB" data-price="5000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">Panel 6GB</div>
+                <div class="muted">CPU 140% • Disk 3Gb</div>
+                <div class="price">Rp 6.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="Panel" data-plan="6GB" data-price="6000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">Panel 7GB</div>
+                <div class="muted">CPU 160% • Disk 4Gb</div>
+                <div class="price">Rp 7.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="Panel" data-plan="7GB" data-price="7000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">Panel 8GB</div>
+                <div class="muted">CPU 180% • Disk 4Gb</div>
+                <div class="price">Rp 8.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="Panel" data-plan="8GB" data-price="8000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">Panel 9GB</div>
+                <div class="muted">CPU 200% • Disk 5Gb</div>
+                <div class="price">Rp 9.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="Panel" data-plan="9GB" data-price="9000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">Panel 10GB</div>
+                <div class="muted">CPU 220% • Disk 5Gb</div>
+                <div class="price">Rp 10.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="Panel" data-plan="10GB" data-price="10000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">Panel Unlimited</div>
+                <div class="muted">CPU 0% • Disk 0</div>
                 <div class="price">Rp 15.000 / bln</div>
-                <button class="btn-primary" data-select data-cat="Panel" data-plan="4GB" data-price="15000">Pilih Paket</button>
+                <button class="btn-primary" data-select data-cat="Panel" data-plan="Unlimited" data-price="15000">Pilih Paket</button>
               </div>
             </div>
           </div>
@@ -371,22 +419,40 @@
           <div class="acc-body">
             <div class="acc-body-inner">
               <div class="card">
-                <div class="title">VPS Nano</div>
-                <div class="muted">1vCPU • 1GB RAM • 20GB SSD</div>
-                <div class="price">Rp 45.000 / bln</div>
-                <button class="btn-primary" data-select data-cat="VPS" data-plan="Nano" data-price="45000">Pilih Paket</button>
+                <div class="title">VPS Pemula</div>
+                <div class="muted">RAM 2GB • CORE 1GB</div>
+                <div class="price">Rp 25.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="VPS" data-plan="Pemula" data-price="25000">Pilih Paket</button>
               </div>
               <div class="card">
-                <div class="title">VPS Micro</div>
-                <div class="muted">2vCPU • 2GB RAM • 40GB SSD</div>
+                <div class="title">VPS Basic</div>
+                <div class="muted">RAM 2GB • CORE 2GB</div>
+                <div class="price">Rp 30.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="VPS" data-plan="Basic" data-price="30000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">VPS Standar</div>
+                <div class="muted">RAM 4GB • CORE 2GB</div>
+                <div class="price">Rp 40.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="VPS" data-plan="standar" data-price="40000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">VPS Premium</div>
+                <div class="muted">RAM 8GB • CORE 4GB</div>
+                <div class="price">Rp 55.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="VPS" data-plan="Premium" data-price="55000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">VPS Vvip</div>
+                <div class="muted">RAM 16GB • CORE 4GB</div>
+                <div class="price">Rp 65.000 / bln</div>
+                <button class="btn-primary" data-select data-cat="VPS" data-plan="Vvip" data-price="65000">Pilih Paket</button>
+              </div>
+              <div class="card">
+                <div class="title">VPS Ultimate</div>
+                <div class="muted">RAM 16GB • CORE 8GB</div>
                 <div class="price">Rp 85.000 / bln</div>
-                <button class="btn-primary" data-select data-cat="VPS" data-plan="Micro" data-price="85000">Pilih Paket</button>
-              </div>
-              <div class="card">
-                <div class="title">VPS Turbo</div>
-                <div class="muted">4vCPU • 8GB RAM • 120GB SSD</div>
-                <div class="price">Rp 220.000 / bln</div>
-                <button class="btn-primary" data-select data-cat="VPS" data-plan="Turbo" data-price="220000">Pilih Paket</button>
+                <button class="btn-primary" data-select data-cat="VPS" data-plan="Ultimate" data-price="90000">Pilih Paket</button>
               </div>
             </div>
           </div>
@@ -426,7 +492,7 @@
   </main>
 
   <footer>
-    © <span id="year"></span> AissOfficial. Dibuat agar memudahkan pembeli.
+    © <span id="year"></span> HostoX. Dibuat dengan cinta dan sedikit kafein.
   </footer>
 
   <script>
@@ -535,26 +601,22 @@
       }
       // default untuk Jadi Bot
       return `
-     <div>
-        <label for="namaBot">Nama Bot</label>
-        <input type="text" id="namaBot" placeholder="Nama Bot" required />
-        <div class="error" id="namaBotErr">Nama Bot wajib diisi.</div>
+      <div>
+          <label for="nama">Nama</label>
+          <input type="text" id="nama" placeholder="Nama lengkap" required />
+          <div class="error" id="namaErr">Nama wajib diisi.</div>
       </div>
       <div>
-        <label for="namaOwner">Nama Owner</label>
-        <input type="text" id="namaOwner" placeholder="Nama Owner" required />
-        <div class="error" id="namaOwnerErr">Nama Owner wajib diisi.</div>
-      </div>
-      <div>
-        <label for="hp">Nomor HP Owner</label>
-        <input type="tel" id="hp" placeholder="08xxx / 62xxx" required />
+        <label for="hp">Nomor HP</label>
+        <input type="tel" id="hp" placeholder="08xxx / +62xxx" required />
         <div class="error" id="hpErr">Nomor HP tidak valid.</div>
       </div>
       <div>
-        <label for="hpBot">Nomor HP Bot</label>
-        <input type="tel" id="hpBot" placeholder="08xxx / 62xxx" required />
+        <label for="hpBot">Nomor HP</label>
+        <input type="tel" id="hpBot" placeholder="08xxx / +62xxx" required />
         <div class="error" id="hpBotErr">Nomor HP tidak valid.</div>
-      </div>`;
+      </div>
+      `;
     }
 
     function sanitizeNameToEmail(name){
@@ -564,7 +626,7 @@
     function updateEmailAuto(){
       const el = document.getElementById('namaAwal');
       const out = document.getElementById('emailAuto');
-      if(el && out){ out.value = sanitizeNameToEmail(el.value) + '@gmail.com'; }
+      if(el && out){ out.value = sanitizeNameToEmail(el.value) + '@aissofficial.com'; }
     }
 
     document.querySelectorAll('[data-select]').forEach(btn => {
@@ -588,24 +650,20 @@
     // ===== Validation helpers
     function show(el, on){ if(!el) return; el.style.display = on ? 'block' : 'none'; }
     function validateNama(){ const el = document.getElementById('nama') || document.getElementById('namaAwal'); const err = document.getElementById('namaErr') || document.getElementById('namaAwalErr'); const ok = !!(el && el.value.trim().length >= 2); show(err,!ok); return ok; }
-    function validateNamaOwner(){ const el = document.getElementById('namaOwner') || document.getElementById('namaOwner'); const err = document.getElementById('namaOwnerErr') || document.getElementById('namaOwnerErr'); const ok = !!(el && el.value.trim().length >= 2); show(err,!ok); return ok; }
-    function validateNamaBot(){ const el = document.getElementById('namaBot') || document.getElementById('namaBot'); const err = document.getElementById('namaBotErr') || document.getElementById('namaBotErr'); const ok = !!(el && el.value.trim().length >= 2); show(err,!ok); return ok; }
     function validateHP(){ const el = document.getElementById('hp'); const err = document.getElementById('hpErr'); if(!el) return true; const v = el.value.replace(/\s|-/g,''); const ok = /^\+?\d{9,15}$/.test(v) || /^0\d{9,13}$/.test(v); show(err,!ok); return ok; }
     function validateGrup(){ const el = document.getElementById('grup'); const err = document.getElementById('grupErr'); if(!el) return true; try{ const u = new URL(el.value); const ok = /^https?:/.test(u.protocol); show(err,!ok); return ok; }catch(e){ show(err,true); return false; } }
     function validatePass(){ const el = document.getElementById('password'); const err = document.getElementById('passErr'); if(!el) return true; const v = el.value; const ok = v.length >= 8 && /[a-z]/.test(v) && /[A-Z]/.test(v) && /\d/.test(v); show(err,!ok); return ok; }
     function validateHPBot(){ const el = document.getElementById('hpBot'); const err = document.getElementById('hpBotErr'); if(!el) return true; const v = el.value.replace(/\s|-/g,''); const ok = /^\+?\d{9,15}$/.test(v) || /^0\d{9,13}$/.test(v); show(err,!ok); return ok; }
-    
+
     function guard(){
       if(!picked){ alert('Silakan pilih paket terlebih dulu.'); return false; }
       const cat = picked.cat;
       const okNama = validateNama();
-      const okNamaOwner = validateNamaOwner();
-      const okNamaBot = validateNamaBot();
       const okHP = validateHP();
       const okHPBot = validateHPBot();
       const okGrup = (cat === 'Sewa Bot') ? validateGrup() : true;
       const okPass = (cat === 'Panel') ? validatePass() : true;
-      return okNama && okNamaOwner && okNamaBot && okHP && okHPBot && okGrup && okPass;
+      return okNama && okHP && okHPBot && okGrup && okPass;
     }
 
     // ===== Compose message per kategori
@@ -639,14 +697,11 @@
         teks += `Nama : ${nama}\n`;
         teks += `No HP : ${hp}\n`;
         teks += `Region : ${region}\n`;
-      } else if(picked.cat === 'Jadi Bot'){
-        const namaBot = document.getElementById('namaBot')?.value || '-';
-        const namaOwner = document.getElementById('namaOwner')?.value || '-';
+      } else { 
         const hpBot = document.getElementById('hpBot')?.value || '-';
-        teks += `Nama Bot : ${namaBot}\n`;
-        teks += `Nama Owner : ${namaOwner}\n`;
-        teks += `No HP Owner : ${hp}\n`;
-        teks += `No HP Bot : ${hpBot}\n`;
+        teks += `Nama : ${nama}\n`
+        teks += `No HP : ${hp}\n`;
+        teks += `No Bot : ${hpBot}\n`;
       }
 
       teks += `Platform : ${platform.toUpperCase()}\n`;
