--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <div class="preloader" id="preloader">
     <div>
       <div class="blob"></div>
-      <div class="loader-text">memuat pengalaman keren…</div>
+      <div class="loader-text">memuat halaman…</div>
     </div>
   </div>
 
@@ -492,7 +492,7 @@
   </main>
 
   <footer>
-    © <span id="year"></span> HostoX. Dibuat dengan cinta dan sedikit kafein.
+    © <span id="year"></span> Aiss - Hosting. Dibuat Untuk Memudahkan Pembeli.
   </footer>
 
   <script>
