--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
                 <div class="badge">Bot WhatsApp</div>
                 <div class="title">Bot Reguler</div>
                 <div class="muted">Limit Terbatas Tanpa Akses Premium</div>
-                <div class="price">Rp 6.000 / 1 bln</div>
+                <div class="price">Rp 6.000 / 1 bulan</div>
                 <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Reguler" data-price="6000">Pilih Paket</button>
               </div>
               <div class="card">
                 <div class="badge">Bot WhatsApp</div>
                 <div class="title">Bot Reguler</div>
                 <div class="muted">Limit Terbatas Tanpa Akses Premium</div>
-                <div class="price">Rp 10.000 / 2 bln</div>
+                <div class="price">Rp 10.000 / 2 bulan</div>
                 <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Reguler" data-price="10000">Pilih Paket</button>
               </div>
               <div class="card">
@@ -217,19 +217,19 @@
                 <div class="badge">Bot WhatsApp</div>
                 <div class="title">Bot Premium</div>
                 <div class="muted">Limit Tanpa Batas & Akses Fitur Premium ( hanya yang sewa )</div>
-                <div class="price">Rp 9.000 / 1 bln</div>
+                <div class="price">Rp 9.000 / 1 bulan</div>
                 <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Premium" data-price="9000">Pilih Paket</button>
               </div>
               <div class="card">
                 <div class="badge">Bot WhatsApp</div>
                 <div class="title">Bot Premium</div>
                 <div class="muted">Limit Tanpa Batas & Akses Fitur Premium ( hanya yang sewa )</div>
-                <div class="price">Rp 12.000 / 2 bln</div>
+                <div class="price">Rp 12.000 / 2 bulan</div>
                 <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Premium" data-price="12000">Pilih Paket</button>
               </div>
               <div class="card">
                 <div class="badge">Bot WhatsApp</div>
-                <div class="title">Bot Reguler</div>
+                <div class="title">Bot Premium</div>
                 <div class="muted">Limit Tanpa Batas & Akses Fitur Premium ( hanya yang sewa )</div>
                 <div class="price">Rp 20.000 / permanen</div>
                 <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Premium" data-price="20000">Pilih Paket</button>
@@ -260,14 +260,14 @@
                 <div class="badge">Bot WhatsApp</div>
                 <div class="title">Bot Vvip</div>
                 <div class="muted">Mendapatkan Limit Tanpa Batas & Premium Untuk 1 Group</div>
-                <div class="price">Rp 13.000 / 1 bln</div>
+                <div class="price">Rp 13.000 / 1 bulan</div>
                 <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Vvip" data-price="13000">Pilih Paket</button>
               </div>
               <div class="card">
                 <div class="badge">Bot WhatsApp</div>
                 <div class="title">Bot Vvip</div>
                 <div class="muted">Mendapatkan Limit Tanpa Batas & Premium Untuk 1 Group</div>
-                <div class="price">Rp 19.000 / 2 bln</div>
+                <div class="price">Rp 19.000 / 2 bulan</div>
                 <button class="btn-primary" data-select data-cat="Sewa Bot" data-plan="Bot Vvip" data-price="19000">Pilih Paket</button>
               </div>
               <div class="card">
@@ -296,31 +296,31 @@
                 <div class="title">Jadi Bot Basic</div>
                 <div class="muted">Bermodalkan No & Bot Aktif 24 Jam</div>
                 <div class="price">Rp 10.000 / 1 Minggu</div>
-                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Basic" data-price="10000">Pilih Paket</button>
+                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Jadibot 1 Minggu" data-price="10000">Pilih Paket</button>
               </div>
               <div class="card">
                 <div class="title">Jadi Bot Standart</div>
                 <div class="muted">Bermodalkan No & Bot Aktif 24 Jam</div>
                 <div class="price">Rp 20.000 / 2 Minggu</div>
-                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Standart" data-price="20000">Pilih Paket</button>
+                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Jadibot 2 Minggu" data-price="20000">Pilih Paket</button>
               </div>
               <div class="card">
                 <div class="title">Jadi Bot Premium</div>
                 <div class="muted">Bermodalkan No & Bot Aktif 24 Jam</div>
                 <div class="price">Rp 30.000 / 3 Minggu</div>
-                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Premium" data-price="30000">Pilih Paket</button>
+                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Jadibot 3 Minggu" data-price="30000">Pilih Paket</button>
               </div>
               <div class="card">
                 <div class="title">Jadi Bot Vvip</div>
                 <div class="muted">Bermodalkan No & Bot Aktif 24 Jam</div>
                 <div class="price">Rp 40.000 / 1 Bulan</div>
-                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Vvip" data-price="40000">Pilih Paket</button>
+                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Jadibot 1 Bulan" data-price="40000">Pilih Paket</button>
               </div>
               <div class="card">
                 <div class="title">Jadi Bot Ultimate</div>
                 <div class="muted">Bermodalkan No & Bot Aktif 24 Jam</div>
                 <div class="price">Rp 50.000 / Permanen</div>
-                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Ultimate" data-price="50000">Pilih Paket</button>
+                <button class="btn-primary" data-select data-cat="Jadi Bot" data-plan="Jadibot Permanen" data-price="50000">Pilih Paket</button>
               </div>
             </div>
           </div>
